2007-03-22  John W. Eaton  <jwe@octave.org>

	* graphics.cc (base_graphics_object::mark_modified):
	New virtual function.
	(base_properties::__modified__): New data member.
	(base_properties::base_properties): Initialize it.
	(graphics_object::mark_modified, base_properties::mark_modified, 
	root_figure::mark_modified, figure::mark_modified,
	axes::mark_modified, line::mark_modified, text::mark_modified,
	image::mark_modified, surface::mark_modified,
	root_figure::root_figure_properties::mark_modified,
	figure::figure_properties::mark_modified,
	axes::axes_properties::mark_modified,
	line::line_properties::mark_modified,
	text::text_properties::mark_modified,
	image::image_properties::mark_modified,
	surface::surface_properties::mark_modified): New functions.
	(figure::figure_properties::set, figure::figure_properties::get,
	axes::axes_properties::set, axes::axes_properties::get,
	line::line_properties::set, line::line_properties::get,
	text::text_properties::set, text::text_properties::get,
	image::image_properties::set, image::image_properties::get,
	surface::surface_properties::set, surface::surface_properties::get):
	Handle __modified__ property.

	* parse.y (Fautoload): Use warning_with_id.

2007-03-21  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__qp__.cc (ABS): Delete.  Use std::abs instead.
	(null): Set elements of retval with magnitudes less than eps to 0.

	* error.cc (Fwarning): Allow setting options with struct.
	If setting options, return previous state.

	* graphics.cc (axes::axes_properties::set_defaults): Reverse sense
	of mode test for setting outerposition property.
	(figure::figure_properties::set): If setting visible property,
	make this figure the current figure.
	(gh_manager::figure_handle_list, gh_manager::do_figure_handle_list):
	New functions.
	(F__go_figure_handles__): New function.

	* sysdep.cc (Fpause): Also call drawnow if nargin == 0.
	(Fkbhit, Fsleep, Fusleep): Also call drawnow here.
